# fairseq

./: .gitignore  kmeans.sh  manifest.sh  manifest_sqfs.sh  pyproject.toml  quantize.sh  quantize_train.sh  quantize_train_sqfs.sh  quantize_valid.sh  quantize_valid_sqfs.sh
examples/textless_nlp/gslm/speech2unit/clustering/: cluster_kmeans.py  dump_feats.py  quantize_with_kmeans.py  utils.py
examples/textless_nlp/gslm/speech2unit/pretrained/: cpc_feature_reader.py  hubert_feature_reader.py  logmel_feature_reader.py  utils.py  w2v2_feature_reader.py
examples/wav2vec/: wav2vec_manifest.py
